[metadata]
name = gdn-python-common
author = Gramedia Digital Nusantara Team
version = 0.3.2
description = Various non-framework specific web helpers.
long_description = file: README.rst
keywords = one, two
license = GPLv3+
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Natural Language :: English
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
  humanize>=0.5.1
  jsonschema>=2.6.0

setup_requires =
  pytest-runner

test_requires =
  pytest>=3.2.1

[aliases]
test=pytest
