[metadata]
name = gdn-python-common
author = Gramedia Digital Nusantara Team
author_email = engineering@gramedia.digital
url = https://engineering.gramedia.com
version = 0.3.4
description = Various non-framework specific web helpers.
long_description = file: README.rst
license = GPLv3+
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Natural Language :: English
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
  humanize>=0.5.1
  jsonschema>=2.6.0

test_requires =
  pytest>=3.2.1
  pylint>=1.9.2

[tool:pytest]
testpaths = tests
